2019-07-10 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Release: 1.2.2
	* Fix variables override (PR #43)

2018-10-05 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Release: 1.2.1
	* Fix Milkcheck 1.2 ends with "ERROR - Unexpected Exception..." (#40)
	* Improve ssh related tests

2018-10-05 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 1.2

2018-02-14 Thomas Leibovici <thomas.leibovici@cea.fr>
	* Add 'confirm_actions' feature

2017-12-20 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Fix report and summary compat issues (#36, #37)

2017-10-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Rebase ServiceManager onto ServiceGroup (#1)

2017-10-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Improve variable resolution and configuration parsing

2017-10-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 1.1

2017-10-06 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Flag for a detailed summary output (ticket #25)

2017-09-29 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add 'tags' feature

2017-09-28 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Variables could be used in all properties (ticket #28)

2017-09-22 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add 'exec' mode for actions (ticket #24)

2017-09-02 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add support for MilkCheck 'remote' option.

2017-03-29 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Graph execution can filter error nodes on dependencies (ticket #6)

2014-07-21 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Display when actions are in progress AND delayed (ticket #18)

2014-07-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add warning threshold. With the 'warnings' property, milkcheck set a
	service in WARNING state if 'warnings' < actions in error status < 'errors'
	(ticket #20)

2014-07-04 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Fix inheritance from Service to Action for the 'retry' property and
	remove 'delay' constraint when using 'retry' (ticket #22).